--- a/Bustroker.AzureAppConfiguration/Bustroker.AzureAppConfiguration.csproj
+++ b/Bustroker.AzureAppConfiguration/Bustroker.AzureAppConfiguration.csproj
@@ -4,5 +4,13 @@
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>Bustroker.AzureAppConfigurationRefresher</PackageId>
+    <Authors>Luis Mesa</Authors>
+    <Version>0.0.1</Version>
+    <PackageVersion>0.0.1</PackageVersion>
+    <Authors>Luis Mesa</Authors>
+    <Company>Bustroker</Company>
+    <Description>Refresher for AzureAppConfiguration, particularly to implement a refresh cycle out of the http request middleware.</Description>
+    <PackageLicense>https://opensource.org/licenses/mit-license.php</PackageLicense>
   </PropertyGroup>
 </Project>
