--- a/Bustroker.AzureAppConfiguration.WebApi/appsettings.json
+++ b/Bustroker.AzureAppConfiguration.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzAppConfigurationConnectionString" : "Endpoint=https://arc-pocs-appconfig.azconfig.io;Id=PV7F-l9-s0:HbWYA/bAhPZEuqqHk7B0;Secret=/HMme3wXPiPcJcFJaK/Q4s+B/a6q9egvvorJzZMlKTs="
+    "AzAppConfigurationConnectionString" : ""
   }
 }
