--- a/Bustroker.AzureAppConfiguration.WebApi/Bustroker.AzureAppConfiguration.WebApi.csproj
+++ b/Bustroker.AzureAppConfiguration.WebApi/Bustroker.AzureAppConfiguration.WebApi.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="azure.identity" Version="1.1.1" />
     <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="3.0.1" />
   </ItemGroup>
 
